kemkas/kemkas-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kemkas-be
  namespace: kemkas
  labels:
    app: kemkas-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kemkas-be
  template:
    metadata:
      name: kemkas-be
      labels:
        app: kemkas-be
    spec:
      containers:
        - name: kemkas-be
          image: registry.digitalocean.com/kemkas/kemkas-be:f0715b2e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 750m
              memory: 300M

      restartPolicy: Always
