kemkas/kemkas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kemkas
  namespace: kemkas
  labels:
    app: kemkas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kemkas
  template:
    metadata:
      name: kemkas
      labels:
        app: kemkas
    spec:
      containers:
        - name: kemkas
          image: registry.digitalocean.com/kemkas/kemkas:45914c78
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 800m
              memory: 400M
                
      restartPolicy: Always
