kemkas/kemkas-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kemkas-fe
  namespace: kemkas
  labels:
    app: kemkas-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kemkas-fe
  template:
    metadata:
      name: kemkas-fe
      labels:
        app: kemkas-fe
    spec:
      containers:
        - name: kemkas-fe
          image: registry.digitalocean.com/kemkas/kemkas-fe:5f56f34b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 50M
            limits:
              cpu: 500m
              memory: 200M

      restartPolicy: Always
